fix(core): linklist collapse icon

--- a/src/scss/custom/_linklist.scss
+++ b/src/scss/custom/_linklist.scss
@@ -52,6 +52,16 @@
             padding-left: 0;
           }
         }
+        &[data-bs-toggle] {
+          .icon {
+            transition: transform 0.3s;
+          }
+        }
+        &[aria-expanded='true'] {
+          .icon {
+            transform: scale(-1);
+          }
+        }
         // hover state
         &:hover:not(.disabled) {
           text-decoration: none;
